# ai-agents

./: .cursorignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Day9.md  Dockerfile  PRD.md  day5_plan.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  cicd.yml
alembic/: env.py
alembic/versions/: 3d766c2062a9_initial_schema.py
app/: main.py
app/agents/: agent.py  agent_graph.mmd
app/api/: deps.py  root.py
app/api/v1/: agent.py  ask.py  draft.py  health.py  ingest.py  review.py  router.py  stream.py
app/config/: settings.py
app/core/: limiter.py  logging.py  middleware.py  retry.py  validators.py
app/db/: base.py  models.py
app/models/: agent.py  ask.py  draft.py  ingest.py  review.py
app/services/: draft_service.py  ingest_service.py  rag_ingest.py  rag_service.py  review_service.py
chroma_db/: chroma.sqlite3
documents/: marketing_policy.md  product_facts.txt
functions/ingest/: Resources structure.mmd  function_app.py  requirements.txt
infra/: github-secrets.sh  provision-blob-ingestion.sh  provision.sh  setup-oidc.sh
notebooks/: explore_chroma.ipynb
scripts/: evaluate.py
tests/: test_draft.py  test_health.py  test_ingest.py  test_middleware.py  test_review.py  test_root.py
