[tool.poetry]
name = "bayer-ai"
version = "0.1.0"
description = "Bayer AI Agent"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
langchain = "^1.2"
langchain-core = "^1.2"
langchain-openai = "^1.1"
pypdf = "^5"
faiss-cpu = "^1.9"
chromadb = "^0.6"
langchain-chroma = "^0.2"
langgraph = "^1.0"
langsmith = ">=0.3"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.30"
alembic = "^1.14"
slowapi = "^0.1.9"
tenacity = "^9.1.4"
sse-starlette = "^3.3.2"
langchain-text-splitters = "^1.1.1"




[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.28.1"
black = "^26.1.0"
isort = "^8.0.1"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
jupyter = "^1.1.1"
ipykernel = "^7.2.0"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
